# template

./: .gitignore  CMakeLists.txt  README.md
src/: entrypoint.cpp
src/core/: application.cpp  application.h
